Начата работа над модулем обновления данных пользователя в динамическом режиме. updater.js и refresher.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
     <script src="/js/start.js"></script>
     <script src="/js/auth.js"></script>
-    <script src="/js/refresher.js"></script>
+    <script src="/js/updater.js"></script>
     <script src="/js/lightbox.js"></script>
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/fancybox/jquery.fancybox.js"></script>
@@ -40,7 +40,7 @@
 
         <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME 2016</div>
         <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME 2016</div>
-        <div class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-6">
+        <div id="widget_uc_ssv" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <div class="ssv_card user_card container-fluid">
                 <div class="user_card_photo col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
                 <div class="user_card_desc col-lg-8 col-md-8 col-sm-8 col-xs-8">
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-6">
+        <div id="widget_uc_msn" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <div class="ssv_card user_card container-fluid">
                 <div class="user_card_photo col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
                 <div class="user_card_desc col-lg-8 col-md-8 col-sm-8 col-xs-8">
