Реализован движок с SQL рефрешеры трендов, реализованы FrontEND рендер графиков настроения

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>DRXT Project HELL GAME</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/dark.css">
     <link rel="stylesheet" href="style/lightbox.css">
@@ -22,7 +24,6 @@
     <script src="/js/global.js"></script>
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
-    <script src="bootstrap/js/bootstrap.js"></script>
 
     <script src="/js/auth.js"></script>
     <script src="/js/updater.js"></script>
@@ -30,11 +31,14 @@
 
     <script src="/js/start.js"></script>
 
+    <script src="/js/trends.js"></script>
     <script src="/js/lightbox.js"></script>
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/fancybox/jquery.fancybox.js"></script>
 
     <script src="/js/checkform.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
 
 
 </head>
@@ -114,6 +118,7 @@
                     <div class="uc_card">Карточка</div>
                     <div class="uc_col_left container-fluid">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
+                            <button class="btn btn-danger btn_clsuc">Закрыть</button>
                             <div class="uc_photo"></div>
                             <div class="label label-success">online</div>
                         </div>
@@ -163,6 +168,7 @@
                         </h2>
                     </div>
                 </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 uc_trends text-center">Ошибка загрузки графика настроения</div>
             </div>
         </div>
         <div id="usercard-g" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
