--- a/index.html
+++ b/index.html
@@ -157,18 +157,18 @@
                     <div class="uc_weather uc_title">Сообщение пользователя</div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                         <i class="fa fa-bolt fa-5x"></i>
-                        <h2 class="weather_title">Гроза</h2>
+                        <h2 class="weather_title">{WEATHER.title}</h2>
                         <p class="label label-danger weather-label-dng">опасно</p>
                         <p class="weather_time">Получено:<span class="weather_time_val">{date}{time}</span></p>
                         <p>данные возможно устарели</p>
                         <p class="emo_title">Настроение:</p>
                         <h2>
-                            <span class="emo_val">50</span><span class="devider">&nbsp;&nbsp;&nbsp;</span>
-                            <span class="emo_val_tend"><div class="glyphicon glyphicon-triangle-top emo_up"></div>+25</span>
+                            <span class="emo_val">{lastEMO}</span>
+                            <span class="devider">&nbsp;&nbsp;&nbsp;</span>
+                            <span class="emo_val_tend"><div class="glyphicon glyphicon-triangle-top emo_up"></div>{tend}</span>
                         </h2>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 uc_trends text-center">Ошибка загрузки графика настроения</div>
             </div>
         </div>
         <div id="usercard-g" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
@@ -177,6 +177,7 @@
                     <div class="uc_card">Карточка</div>
                     <div class="uc_col_left container-fluid">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
+                            <button class="btn btn-danger btn_clsuc">Закрыть</button>
                             <div class="uc_photo"></div>
                             <div class="label label-success">online</div>
                         </div>
@@ -247,6 +248,7 @@
                 </div>
             </div>
         </div>
+        <div id="trend" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 uc_trends text-center">Ошибка загрузки графика настроения</div>
 
     </div>
     <div id="fancytemp" class="container"></div>
