--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!--meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"-->
     <title>DRXT Project HELL GAME</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -25,6 +25,7 @@
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
 
+
     <script src="/js/auth.js"></script>
     <script src="/js/updater.js"></script>
     <script src="/js/refresher.js"></script>
@@ -38,17 +39,18 @@
 
     <script src="/js/checkform.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/stock/highstock.js"></script>
 
 
 </head>
-<body class="clearfix">
+<body>
     <div id="tooltip"></div>
     <div id="header" class="container-fluid headerdark">
         <div id="sysmsg" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">Системное сообщение: <span id="sysmsg_val"></span></div>
 
         <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME 2016</div>
         <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME 2016</div>
+
         <div id="widget_uc_ssv" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <div class="ssv_card user_card container-fluid">
                 <div class="user_card_photo col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
@@ -93,10 +95,14 @@
                 </div>
             </div>
         </div>
+
         <div id="menu" class="col-lg-4 col-md-4 col-sm-6 text-right hidden-xs"></div>
         <div id="menupda" class="col-xs-12 visible-xs text-center"></div>
+
         <div id="admintools" class="col-xs-12 text-center"></div>
+
         <div id="addmc" class="col-xs-12 text-center"></div>
+
         <div id="loginform" class="col-xs-12 text-center form-inline">
             <header>Авторизация</header>
             <div class="form-group">
@@ -112,6 +118,7 @@
                 <button class="btnlogincl btn btn-danger btn-group-sm">Закрыть</button>
             </div>
         </div>
+
         <div id="usercard" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
             <div class="container-fluid uc_wrapper">
                 <div class="uc_col col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
@@ -186,7 +193,7 @@
                             <p class="uc_name">---</p>
                             <p class="uc_title">---</p>
                             <h4>
-                                <span class="btn btn-danger btn-played" data-played="false">Играть</span>
+                                <span class="btn btn-danger btn-played disabled" data-played="false">Играть</span>
                             </h4>
                             <div class="form-group">
                                 <input type="text" class="uc_msg form-control" maxlength="20" placeholder="Сообщение всем">
@@ -211,9 +218,9 @@
                             </div>
                             <div class="form-group">
                                 <label>Описание</label>
-                                <textarea class="uc_emo_description form-control" rows="5" placeholder="Добавьте причину такого состояния"></textarea>
+                                <textarea class="uc_emo_description form-control" rows="6" placeholder="Добавьте причину такого состояния"></textarea>
                             </div>
-                            <button class="btn btn-success disabled">Отправить</button>
+                            <button class="btn btn-success btn_emo_submit disabled">Отправить</button>
                         </div>
                     </div>
                 </div>
@@ -248,7 +255,8 @@
                 </div>
             </div>
         </div>
-        <div id="trend" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 uc_trends text-center">Ошибка загрузки графика настроения</div>
+
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center"><div id="trend" class="uc_trends"></div></div>
 
     </div>
     <div id="fancytemp" class="container"></div>
