minimizer for forecast added

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                 <div class="uc_col col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="uc_card">Текущая</div>
                     <button class="btn btn-danger btn_clswc"><i class="fa fa-close"></i>Закрыть</button>
+                    <button class="btn btn-default active btn_f_item_more"><i class="fa fa-th-list"></i></button>
                     <div class="wc_weather_icon">
                         <div class="wc_main_temp">{main.temp}</div>
                     </div>
